# tt-buffer

./: CMakeLists.txt  main.cpp
include/: utility.hpp
kernels/compute/: summa.cpp
kernels/dataflow/: summa_read.cpp  summa_write.cpp
